add submit value in DB, craate rate, change api in counterValue
